teerms-and-condition

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <a href="#HomeSection">Home</a>
       </li>
       <li>
-        <a href="https://sekurd.com/about-us.html" target="_blank">About Us</a>
+        <a href="./about-us.html">About Us</a>
       </li>
       <li>
         <a href="#FeaturesSection">Features</a>
@@ -250,7 +250,7 @@
         <a href="#pricingSection">Packages</a>
       </li> -->
       <li>
-        <a href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
+        <a class="scheduleButton">Contact us</a>
       </li>
     </ul>
   </nav>
@@ -272,7 +272,7 @@
                   <a class="nav_link" href="#HomeSection">Home</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="https://sekurd.com/about-us.html" target="_blank">About Us</a>
+                  <a class="nav_link" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="#FeaturesSection">Features</a>
@@ -281,7 +281,7 @@
                   <a class="nav_link" href="#pricingSection">Packages</a>
                 </li> -->
                 <li class="nav_item">
-                  <a class="nav_link" href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
+                  <a class="nav_link scheduleButton">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -943,7 +943,7 @@
     </div>
   </div>
 
-  <!-- <div class="pricing" data-aos="fade-up" id="pricingSection">
+  <div class="pricing" data-aos="fade-up" id="pricingSection">
     <div class="container-fluid pd-100">
       <div class="section_header">
         <h5>Be more safe</h5>
@@ -957,15 +957,15 @@
                 <th></th>
                 <th>
                   <span>Standard</span>
-                  <p><sub>$</sub>3000/<span>year</span></p>
+                  <button class="scheduleButton btn">Talk to Sales</button>
                 </th>
                 <th>
                   <span>Premium</span>
-                  <p><sub>$</sub>5000/<span>year</span></p>
+                  <button class="scheduleButton btn">Talk to Sales</button>
                 </th>
                 <th>
                   <span>Enterprise</span>
-                  <p><sub>$</sub>10,000/<span>year</span></p>
+                  <button class="scheduleButton btn">Talk to Sales</button>
                 </th>
               </thead>
               <tbody>
@@ -1043,7 +1043,7 @@
       </div>
 
     </div>
-  </div> -->
+  </div>
 
   <!-- <div class="testemonial">
     <div class="container-fluid pd-100">
@@ -1266,8 +1266,8 @@
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
                     Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
-              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
-                    Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li>
+             <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
+                    Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li> -->
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar
                     Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
             </ul>
