--- a/terms-condition.html
+++ b/terms-condition.html
@@ -238,19 +238,19 @@
   <nav id="menu">
     <ul>
       <li class="">
-        <a href="index.html#HomeSection">Home</a>
+        <a href="./index.html#HomeSection">Home</a>
       </li>
       <li>
-        <a href="https://sekurd.com/about-us.html" target="_blank">About Us</a>
+        <a href="./about-us.html">About Us</a>
       </li>
       <li>
-        <a href="index.html#FeaturesSection">Features</a>
+        <a href="./index.html#FeaturesSection">Features</a>
       </li>
       <!-- <li>
           <a href="#pricingSection">Packages</a>
         </li> -->
       <li>
-        <a href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
+        <a class="scheduleButton">Contact us</a>
       </li>
     </ul>
   </nav>
@@ -270,19 +270,19 @@
             <div class="linkslis">
               <ul class="navbar_nav d-flex align-items-center list-unstyled">
                 <li class="nav_item">
-                  <a class="nav_link" href="index.html#HomeSection">Home</a>
+                  <a class="nav_link" href="./index.html#HomeSection">Home</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="https://sekurd.com/about-us.html" target="_blank">About Us</a>
+                  <a class="nav_link" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="index.html#FeaturesSection">Features</a>
+                  <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
                 <!-- <li class="nav_item">
                     <a class="nav_link" href="#pricingSection">Packages</a>
                   </li> -->
                 <li class="nav_item">
-                  <a class="nav_link" href="https://sekurd.com/contact-us.html" target="_blank">Contact us</a>
+                  <a class="nav_link scheduleButton">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -452,8 +452,8 @@
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
                     Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
-              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
-                    Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li>
+             <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
+                    Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li> -->
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar
                     Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
             </ul>
