--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
     </div>
   </div>
 
-  <div class="pricing" data-aos="fade-up" id="pricingSection">
+  <!-- <div class="pricing" data-aos="fade-up" id="pricingSection">
     <div class="container-fluid pd-100">
       <div class="section_header">
         <h5>Be more safe</h5>
@@ -1043,7 +1043,7 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="testemonial">
     <div class="container-fluid pd-100">
