--- a/about-us-new.html
+++ b/about-us-new.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <!-- <div class="splach">
+  <div class="splach">
 
     <svg class="pl" viewBox="0 0 32 32" width="32px" height="32px">
       <g stroke="currentcolor" stroke-linecap="round" stroke-width="1" stroke-dasharray="5 8">
@@ -231,7 +231,7 @@
         </g>
       </g>
     </svg>
-  </div> -->
+  </div>
 
   <!-- mobile menu -->
   <nav id="menu">
@@ -395,7 +395,7 @@
   <div class="testemonials_new">
     <div class="container-fluid pd-100">
       <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-6 col-md-6 col-lg-4">
           <div class="testemonials_new_card d-flex align-items-center justify-content-center">
             <div class=" card_icon">
               <img src="./assets/images/Frame 2445.svg" alt="">
@@ -406,7 +406,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-6 col-md-6 col-lg-4">
           <div class="testemonials_new_card d-flex align-items-center justify-content-center">
             <div class="card_icon">
               <img src="./assets/images/Frame 2445 (1).svg" alt="">
@@ -417,7 +417,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-6 col-md-6 col-lg-4">
           <div class="testemonials_new_card d-flex align-items-center justify-content-center"">
               <div class=" card_icon">
             <img src="./assets/images/Frame 2445 (2).svg" alt="">
