--- a/contact-us.html
+++ b/contact-us.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <!-- <div class="splach">
+  <div class="splach">
 
     <svg class="pl" viewBox="0 0 32 32" width="32px" height="32px">
       <g stroke="currentcolor" stroke-linecap="round" stroke-width="1" stroke-dasharray="5 8">
@@ -231,7 +231,7 @@
         </g>
       </g>
     </svg>
-  </div> -->
+  </div>
 
   <!-- mobile menu -->
   <nav id="menu">
@@ -239,7 +239,7 @@
       <li>
         <a href="#HomeSection">Home</a>
       </li>
-      <li class="active">
+      <li>
         <a href="./about-us.html">About Us</a>
       </li>
       <li>
@@ -248,7 +248,7 @@
       <!-- <li>
       <a href="#pricingSection">Packages</a>
     </li> -->
-      <li>
+      <li class="active">
         <a href="" class="scheduleButton">Contact us</a>
       </li>
     </ul>
@@ -270,7 +270,7 @@
                 <li class="nav_item">
                   <a class="nav_link" href="./index.html#HomeSection">Home</a>
                 </li>
-                <li class="nav_item active">
+                <li class="nav_item">
                   <a class="nav_link" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav_item">
@@ -279,7 +279,7 @@
                 <!-- <li class="nav_item">
                 <a class="nav_link" href="#pricingSection">Packages</a>
               </li> -->
-                <li class="nav_item">
+                <li class="nav_item active">
                   <a class="nav_link scheduleButton">Contact us</a>
                 </li>
               </ul>
