--- a/dark-web-montring.html
+++ b/dark-web-montring.html
@@ -34,7 +34,7 @@
 
 <body>
 
-  <!-- <div class="splach">
+  <div class="splach">
 
     <svg class="pl" viewBox="0 0 32 32" width="32px" height="32px">
       <g stroke="currentcolor" stroke-linecap="round" stroke-width="1" stroke-dasharray="5 8">
@@ -232,7 +232,7 @@
         </g>
       </g>
     </svg>
-  </div> -->
+  </div>
 
   <!-- mobile menu -->
   <nav id="menu">
