--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
 
-  <!-- <div class="splach">
+  <div class="splach">
 
     <svg class="pl" viewBox="0 0 32 32" width="32px" height="32px">
       <g stroke="currentcolor" stroke-linecap="round" stroke-width="1" stroke-dasharray="5 8">
@@ -232,7 +232,7 @@
         </g>
       </g>
     </svg>
-  </div> -->
+  </div>
 
   <!-- mobile menu -->
   <nav id="menu">
@@ -309,7 +309,7 @@
     </div>
     <div class="container-fluid h-100 pd-100">
       <div class="row h-100 align-items-center">
-        <div class="col-sm-12 col-md-12 col-lg-8 mx-auto">
+        <div class="col-sm-12 col-md-12 col-lg-10 col-xl-8 mx-auto">
           <div class="header_content h-100 d-flex align-items-center">
             <div>
               <h5>SekurdEYE is a top-tier platform for External Attack Surface Management, Dark web monitoring</span>
@@ -342,7 +342,7 @@
     </div>
     <div class="container-fluid pd-100">
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
               <img src="./assets/images/global-search.svg" alt="">
@@ -352,7 +352,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
               <img src="./assets/images/global-search.svg" alt="">
@@ -362,7 +362,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
               <img src="./assets/images/global-search.svg" alt="">
@@ -372,7 +372,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
               <img src="./assets/images/global-search.svg" alt="">
@@ -382,7 +382,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
               <img src="./assets/images/global-search.svg" alt="">
@@ -392,7 +392,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
               <img src="./assets/images/global-search.svg" alt="">
@@ -402,7 +402,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
               <img src="./assets/images/global-search.svg" alt="">
@@ -412,7 +412,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
               <img src="./assets/images/global-search.svg" alt="">
@@ -425,7 +425,6 @@
       </div>
     </div>
   </div>
-
 
   <div class="attack_surface_montring_section">
     <div class="fram1">
@@ -453,7 +452,6 @@
       </div>
     </div>
   </div>
-
 
   <div class="factures_cards">
     <div class="container-fluid pd-100">
@@ -495,6 +493,9 @@
   </div>
 
   <div class="request_free_report">
+    <div class="vector">
+      <img src="./assets/images/Vector18.svg" alt="">
+    </div>
     <div class="wrapper">
       <div class="container-fluid pd-100">
         <h5>Request a free report</h5>
@@ -515,7 +516,7 @@
   <div class="section_img_par first_section_img_par">
     <div class="container-fluid pd-100">
       <div class="row align-items-center">
-        <div class="col-sm-12 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-6 col-lg-6 order-sm-2">
           <div class="section_img_par_content">
             <h5>Hacker may already be in your system you just don’t know it yet.</h5>
             <p>
@@ -542,7 +543,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-6 col-lg-6 order-sm-1">
           <div class="section_img_par_img" style="text-align: right;">
             <img src="./assets/images/wepik-export-20231026003443tjA7 1.png" alt="">
           </div>
@@ -713,12 +714,12 @@
   <div class="asked_question">
     <div class="container-fluid pd-100">
       <div class="row align-items-center">
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-12 col-lg-3">
           <div class="asked_question_title">
             <h5>Frequently <br /> asked questions</h5>
           </div>
         </div>
-        <div class="col-sm-12 col-md-8 col-lg-9">
+        <div class="col-sm-12 col-md-12 col-lg-9">
           <div class="asked_question_tabs">
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
