--- a/about-us.html
+++ b/about-us.html
@@ -233,10 +233,9 @@
     </svg>
   </div>
 
-  <!-- mobile menu -->
   <nav id="menu">
     <ul>
-      <li>
+      <li class="">
         <a href="#HomeSection">Home</a>
       </li>
       <li class="active">
@@ -245,11 +244,11 @@
       <li>
         <a href="./index.html#FeaturesSection">Features</a>
       </li>
-      <!-- <li>
-      <a href="#pricingSection">Packages</a>
-    </li> -->
       <li>
-        <a href="" class="scheduleButton">Contact us</a>
+        <a href="./attack-service-managment.html">Products</a>
+      </li>
+      <li>
+        <a class="" href="./contact-us.html">Contact us</a>
       </li>
     </ul>
   </nav>
@@ -268,7 +267,7 @@
             <div class="linkslis">
               <ul class="navbar_nav d-flex align-items-center list-unstyled">
                 <li class="nav_item">
-                  <a class="nav_link" href="./index.html#HomeSection">Home</a>
+                  <a class="nav_link" href="#HomeSection">Home</a>
                 </li>
                 <li class="nav_item active">
                   <a class="nav_link" href="./about-us.html">About Us</a>
@@ -276,11 +275,11 @@
                 <li class="nav_item">
                   <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
-                <!-- <li class="nav_item">
-                <a class="nav_link" href="#pricingSection">Packages</a>
-              </li> -->
                 <li class="nav_item">
-                  <a class="nav_link scheduleButton">Contact us</a>
+                  <a class="nav_link" href="./attack-service-managment.html">products</a>
+                </li>
+                <li class="nav_item">
+                  <a class="nav_link" href="./contact-us.html">Contact us</a>
                 </li>
               </ul>
             </div>
