--- a/contact-us.html
+++ b/contact-us.html
@@ -236,20 +236,20 @@
   <!-- mobile menu -->
   <nav id="menu">
     <ul>
-      <li>
+      <li class="">
         <a href="#HomeSection">Home</a>
       </li>
-      <li>
+      <li class="">
         <a href="./about-us.html">About Us</a>
       </li>
       <li>
         <a href="./index.html#FeaturesSection">Features</a>
       </li>
-      <!-- <li>
-      <a href="#pricingSection">Packages</a>
-    </li> -->
+      <li class="">
+        <a href="./attack-service-managment.html">Products</a>
+      </li>
       <li class="active">
-        <a href="" class="scheduleButton">Contact us</a>
+        <a class="" href="./contact-us.html">Contact us</a>
       </li>
     </ul>
   </nav>
@@ -268,7 +268,7 @@
             <div class="linkslis">
               <ul class="navbar_nav d-flex align-items-center list-unstyled">
                 <li class="nav_item">
-                  <a class="nav_link" href="./index.html#HomeSection">Home</a>
+                  <a class="nav_link" href="#HomeSection">Home</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="./about-us.html">About Us</a>
@@ -276,11 +276,11 @@
                 <li class="nav_item">
                   <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
-                <!-- <li class="nav_item">
-                <a class="nav_link" href="#pricingSection">Packages</a>
-              </li> -->
+                <li class="nav_item">
+                  <a class="nav_link" href="./attack-service-managment.html">products</a>
+                </li>
                 <li class="nav_item active">
-                  <a class="nav_link scheduleButton">Contact us</a>
+                  <a class="nav_link" href="./contact-us.html">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -327,261 +327,45 @@
     </div>
   </div>
 
-
-
-  <div class="why_choose_us">
-    <div class="vector_9">
-      <img src="./assets/images/Vector (9).svg" alt="">
-    </div>
-    <div class="vector_10">
-      <img src="./assets/images/Vector (10).svg" alt="">
-    </div>
+  <div class="make_appointment">
     <div class="container-fluid pd-100">
       <div class="section_header">
-        <h5>Why Choose Us ?</h5>
+        <h5>We'd like to hear from you!</h5>
       </div>
-      <div class="why_choose_us_cards">
-        <div class="row">
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="why_choose_us_card">
-              <div class="card_icon">
-                <img src="./assets/images/Shape (18).svg" alt="">
-              </div>
-              <div class="card_body">
-                <h5>world renowned security researchers</h5>
-                <p>
-                  Our world renowned security experts are qualified and competent in their areas of specialization. the
-                  enthusiasm is behind the assurance of red Force security advisors to dependably deliver the outcomes
-                  in a way that makes us pleased of what we do.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="why_choose_us_card">
-              <div class="card_icon">
-                <img src="./assets/images/banner.svg" alt="">
-              </div>
-              <div class="card_body">
-                <h5>high quality services</h5>
-                <p>
-                  We follow strict quality assurance procedures to ensure high-quality services. The quality of our
-                  services is bolstered by self-evident abilities with viable and demonstrated security assessment
-                  methodologies that are custom fitted for every condition sort
-                </p>
+      <div class="calendly-inline-widget"
+        data-url="https://calendly.com/sekurd?background_color=00142c&text_color=ffffff"
+        style="min-width:100%;height:700px;">
+      </div>
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+        <div class="contact_us_content">
+          <h5>Contact Info</h5>
+          <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-6">
+              <div class="contact_info_card">
+                <ul class="list-unstyled">
+                  <li class="d-flex align-items-center">
+                    <img src="./assets/images/icons8-location-100.png" alt="" />
+                    <span>
+                      UK Office:71-75 Shelton
+                      Street Covent Garden London WC2H 9JQ
+                    </span>
+                  </li>
+                </ul>
               </div>
             </div>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="why_choose_us_card">
-              <div class="card_icon">
-                <img src="./assets/images/search-visual.svg" alt="">
+            <div class="col-sm-12 col-md-12 col-lg-6">
+              <div class="contact_info_card">
+                <ul class="list-unstyled">
+                  <li class="d-flex align-items-start">
+                    <img src="./assets/images/icons8-location-100.png" alt="" />
+                    <span>
+                      Addiyar Building, Ground
+                      Floor,
+                      RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai
+                    </span>
+                  </li>
+                </ul>
               </div>
-              <div class="card_body">
-                <h5>research oriented assessment</h5>
-                <p>
-                  The bigger part of our assessments is based on manual research and in-house techniques rather
-                  automated scanners which gives your application/system a thorough analysis
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="testemonials_new">
-    <div class="container-fluid pd-100">
-      <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="testemonials_new_card d-flex align-items-center justify-content-center">
-            <div class=" card_icon">
-              <img src="./assets/images/Frame 2445.svg" alt="">
-            </div>
-            <div class="card_body">
-              <h5>+200</h5>
-              <p>Cybersecurity Projects</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="testemonials_new_card d-flex align-items-center justify-content-center">
-            <div class="card_icon">
-              <img src="./assets/images/Frame 2445 (1).svg" alt="">
-            </div>
-            <div class="card_body">
-              <h5>+150</h5>
-              <p>Clients Protection</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="testemonials_new_card d-flex align-items-center justify-content-center"">
-              <div class=" card_icon">
-            <img src="./assets/images/Frame 2445 (2).svg" alt="">
-          </div>
-          <div class="card_body">
-            <h5>+50</h5>
-            <p>Team Experts</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-  <div class="team_certificate">
-    <div class="container-fluid pd-100">
-      <div class="section_header">
-        <h5>Team Certificates</h5>
-        <p class="col-lg-6 mx-auto">
-          Our team is made up of experts with globally recognized certifications.
-        </p>
-      </div>
-      <div class="team_certificate_slider">
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert1.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert2.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert3.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert4.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert5.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert6.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert7.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert1.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert3.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert2.png" alt="">
-          </div>
-        </div>
-        <div class="slider_item">
-          <div class="card_icon">
-            <img src="./assets/images/cert5.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="aknowlged_by">
-    <div class="container-fluid pd-100">
-      <div class="aknowlged_by_wrapper">
-        <div class="section_header">
-          <h5>Acknowledge by</h5>
-        </div>
-        <div class="aknowlged_by_slider">
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp1.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp2.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp3.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp4.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp5.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp1.svg" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="our_partners_new">
-    <div class="vecor_92">
-      <img src="./assets/images/Vector (92).svg" alt="">
-    </div>
-    <div class="container-fluid pd-100">
-      <div class="aknowlged_by_wrapper">
-        <div class="section_header">
-          <h5>Acknowledge by</h5>
-        </div>
-        <div class="aknowlged_by_slider">
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp1.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp2.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp3.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp4.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp5.svg" alt="">
-            </div>
-          </div>
-          <div class="slider_item">
-            <div class="card_icon">
-              <img src="./assets/images/comp1.svg" alt="">
             </div>
           </div>
         </div>
@@ -599,7 +383,8 @@
               <img src="./assets/images/logo 1.svg" alt="">
             </a>
             <p>
-              Join us at Sekurd, and together, let’s build a secure foundation for your organization’s digital journey.
+              Join us at Sekurd, and together, let’s build a secure foundation for your organization’s digital
+              journey.
             </p>
             <ul class="list-unstyled d-flex">
               <li><a href="https://www.instagram.com/sekurd_official/" target="_blank"><img src="./assets/images/ig.svg"
@@ -631,9 +416,10 @@
             <ul class="list-unstyled">
               <li><a href=""><i class="fas fa-envelope"></i><span>info@sekurd.com</span></a></li>
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
-              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
+              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK
+                    Office:71-75
                     Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
-             <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
+              <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
                     Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li> -->
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar
                     Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
