--- a/dark-web-montring.html
+++ b/dark-web-montring.html
@@ -237,20 +237,20 @@
   <!-- mobile menu -->
   <nav id="menu">
     <ul>
-      <li>
+      <li class="">
         <a href="#HomeSection">Home</a>
       </li>
-      <li class="active">
+      <li class="">
         <a href="./about-us.html">About Us</a>
       </li>
       <li>
         <a href="./index.html#FeaturesSection">Features</a>
       </li>
-      <!-- <li>
-        <a href="#pricingSection">Packages</a>
-      </li> -->
+      <li class="active">
+        <a href="./attack-service-managment.html">Products</a>
+      </li>
       <li>
-        <a href="" class="scheduleButton">Contact us</a>
+        <a class="" href="./contact-us.html">Contact us</a>
       </li>
     </ul>
   </nav>
@@ -269,19 +269,19 @@
             <div class="linkslis">
               <ul class="navbar_nav d-flex align-items-center list-unstyled">
                 <li class="nav_item">
-                  <a class="nav_link" href="./index.html#HomeSection">Home</a>
+                  <a class="nav_link" href="#HomeSection">Home</a>
                 </li>
-                <li class="nav_item active">
+                <li class="nav_item">
                   <a class="nav_link" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
-                <!-- <li class="nav_item">
-                  <a class="nav_link" href="#pricingSection">Packages</a>
-                </li> -->
+                <li class="nav_item active">
+                  <a class="nav_link" href="./attack-service-managment.html">products</a>
+                </li>
                 <li class="nav_item">
-                  <a class="nav_link scheduleButton">Contact us</a>
+                  <a class="nav_link" href="./contact-us.html">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -318,8 +318,8 @@
           </div>
           <div class="tabs_for">
             <ul class="list-unstyled d-flex justify-content-center">
-              <li class="active"><a href="">Dark web motoring</a></li>
-              <li><a href="">Attack service Managment </a></li>
+              <li class="active"><a href="./dark-web-montring.html">Dark web motoring</a></li>
+              <li><a href="./attack-service-managment.html">Attack service Managment </a></li>
             </ul>
           </div>
           <div class="page_title">
