--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
 
-  <div class="splach">
+  <!-- <div class="splach">
 
     <svg class="pl" viewBox="0 0 32 32" width="32px" height="32px">
       <g stroke="currentcolor" stroke-linecap="round" stroke-width="1" stroke-dasharray="5 8">
@@ -232,7 +232,7 @@
         </g>
       </g>
     </svg>
-  </div>
+  </div> -->
 
   <!-- mobile menu -->
   <nav id="menu">
@@ -244,13 +244,13 @@
         <a href="./about-us.html">About Us</a>
       </li>
       <li>
-        <a href="#FeaturesSection">Features</a>
+        <a href="./index.html#FeaturesSection">Features</a>
       </li>
-      <!-- <li>
-        <a href="#pricingSection">Packages</a>
-      </li> -->
       <li>
-        <a class="scheduleButton">Contact us</a>
+        <a href="./attack-service-managment.html">Products</a>
+      </li>
+      <li>
+        <a class="" href="./contact-us.html">Contact us</a>
       </li>
     </ul>
   </nav>
@@ -275,13 +275,13 @@
                   <a class="nav_link" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="#FeaturesSection">Features</a>
+                  <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
-                <!-- <li class="nav_item">
-                  <a class="nav_link" href="#pricingSection">Packages</a>
-                </li> -->
                 <li class="nav_item">
-                  <a class="nav_link scheduleButton">Contact us</a>
+                  <a class="nav_link" href="./attack-service-managment.html">products</a>
+                </li>
+                <li class="nav_item">
+                  <a class="nav_link" href="./contact-us.html">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -333,7 +333,7 @@
     </div>
   </div>
 
-  <div class="services_cards_index">
+  <div class="services_cards_index" id="FeaturesSection">
     <div class="vector_img">
       <img src="./assets/images/Vector.svg" alt="">
     </div>
@@ -446,7 +446,7 @@
               It is a long established fact that a reader will be distracted by the readable content of a page when
               looking at its layout. 
             </p>
-            <a href=""><span>Discover</span><i class="fas fa-arrow-right"></i></a>
+            <a href="./attack-service-managment.html"><span>Discover</span><i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -516,7 +516,7 @@
   <div class="section_img_par first_section_img_par">
     <div class="container-fluid pd-100">
       <div class="row align-items-center">
-        <div class="col-sm-12 col-md-6 col-lg-6 order-sm-2">
+        <div class="col-sm-12 col-md-6 col-lg-6 ordersm2">
           <div class="section_img_par_content">
             <h5>Hacker may already be in your system you just don’t know it yet.</h5>
             <p>
@@ -543,9 +543,9 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 order-sm-1">
+        <div class="col-sm-12 col-md-6 col-lg-6 ordersm1">
           <div class="section_img_par_img" style="text-align: right;">
-            <img src="./assets/images/wepik-export-20231026003443tjA7 1.png" alt="">
+            <img src="./assets/images/image 19.png" alt="">
           </div>
         </div>
       </div>
