--- a/index_old.html
+++ b/index_old.html
@@ -244,7 +244,7 @@
         <a href="./about-us.html">About Us</a>
       </li>
       <li>
-        <a href="#FeaturesSection">Features</a>
+        <a href="./index.html#FeaturesSection">Features</a>
       </li>
       <!-- <li>
         <a href="#pricingSection">Packages</a>
@@ -275,7 +275,7 @@
                   <a class="nav_link" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="#FeaturesSection">Features</a>
+                  <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
                 <!-- <li class="nav_item">
                   <a class="nav_link" href="#pricingSection">Packages</a>
