--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -246,22 +246,21 @@
       <li>
         <a href="./index.html#FeaturesSection">Features</a>
       </li>
-      <!-- <li>
-          <a href="#pricingSection">Packages</a>
-        </li> -->
+      <li>
+        <a href="./attack-service-managment.html">Products</a>
+      </li>
       <li>
         <a class="scheduleButton">Contact us</a>
       </li>
     </ul>
   </nav>
 
-
   <div class="custom_navbar inner_custom_navbar">
     <div class="container-fluid pd-100">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-12 col-lg-7">
           <nav class="navbar-links d-flex align-items-center">
-            <a class="navbarـbrand" href="./index.html">
+            <a class="navbarـbrand" href="#">
               <img src="./assets/images/logo 1.svg" alt="logo" />
             </a>
             <a class="navbar_toggler_btn" href="#menu">
@@ -278,9 +277,9 @@
                 <li class="nav_item">
                   <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
-                <!-- <li class="nav_item">
-                    <a class="nav_link" href="#pricingSection">Packages</a>
-                  </li> -->
+                <li class="nav_item">
+                    <a class="nav_link" href="./attack-service-managment.html">Products</a>
+                  </li>
                 <li class="nav_item">
                   <a class="nav_link scheduleButton">Contact us</a>
                 </li>
