--- a/terms-condition.html
+++ b/terms-condition.html
@@ -246,9 +246,9 @@
       <li>
         <a href="./index.html#FeaturesSection">Features</a>
       </li>
-      <!-- <li>
-          <a href="#pricingSection">Packages</a>
-        </li> -->
+      <li>
+        <a href="./attack-service-managment.html">Products</a>
+      </li>
       <li>
         <a class="scheduleButton">Contact us</a>
       </li>
@@ -278,9 +278,9 @@
                 <li class="nav_item">
                   <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
-                <!-- <li class="nav_item">
-                    <a class="nav_link" href="#pricingSection">Packages</a>
-                  </li> -->
+                <li class="nav_item">
+                    <a class="nav_link" href="./attack-service-managment.html">Products</a>
+                  </li>
                 <li class="nav_item">
                   <a class="nav_link scheduleButton">Contact us</a>
                 </li>
@@ -324,7 +324,8 @@
         <p>
           <span>1. Definitions</span>
 
-          "Company" refers to Sekurd, a cybersecurity company providing security services and the owner of SekurdEYE.<br>
+          "Company" refers to Sekurd, a cybersecurity company providing security services and the owner of
+          SekurdEYE.<br>
 
           "Website" refers to sekurdeye.com.<br>
 
@@ -334,7 +335,8 @@
         <p>
           <span>2. Use of Website</span>
 
-          The content of this Website is for informational purposes only and does not constitute professional advice.<br>
+          The content of this Website is for informational purposes only and does not constitute professional
+          advice.<br>
 
           You agree to use this Website only for lawful purposes and in compliance with all applicable laws and
           regulations.<br>
@@ -452,7 +454,7 @@
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
                     Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
-             <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
+              <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
                     Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li> -->
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar
                     Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
